--- a/box.json.dist
+++ b/box.json.dist
@@ -19,7 +19,7 @@
     "intercept": true,
     "key": ".travis/phar-private.pem",
     "main": "sshman.php",
-    "output": "bin/sshman.phar",
+    "output": "sshman.phar",
     "alias": "sshman.phar",
     "stub": true
 }
