--- a/box.json.dist
+++ b/box.json.dist
@@ -20,6 +20,6 @@
     "key": ".travis/phar-private.pem",
     "main": "sshman.php",
     "output": "sshman.phar",
-    "alias": "sshman.phar",
+    "alias": "sshman",
     "stub": true
 }
