--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,11 @@ cache:
 matrix:
   fast_finish: true
   include:
-  - php: 5.5
-  - php: 5.6
+  - php: '5.6'
     env:
     - EXECUTE_DEPLOYMENT=true
-  - php: 7
+  - php: '7.0'
+  - php: '7.1'
   - php: hhvm
   allow_failures:
   - php: hhvm
