--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,8 @@
             "name": "Michael Wender",
             "email": "michael@michaelwender.com"
         }
-    ]
+    ],
+    "require-dev": {
+        "phpunit/phpunit": "^6.1"
+    }
 }
