Removing phar-updater

--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "CLI tool for accessing servers via SSH.",
     "type": "PHAR",
     "require": {
-        "wp-cli/php-cli-tools": "^0.11.1",
-        "padraic/phar-updater": "^1.0"
+        "wp-cli/php-cli-tools": "^0.11.1"
     },
     "license": "MIT",
     "authors": [
