Bugfix: Including HELP and VERSION files

--- a/box.json.dist
+++ b/box.json.dist
@@ -5,7 +5,9 @@
         "lib"
     ],
     "files": [
-        "LICENSE"
+        "LICENSE",
+        "VERSION",
+        "HELP"
     ],
     "finder": [
         {
